# QCSXCAD

./: .gitignore  CMakeLists.txt  INSTALL  NEWS  QCSGridEditor.cpp  QCSGridEditor.h  QCSPrimEditor.cpp  QCSPrimEditor.h  QCSPropEditor.cpp  QCSPropEditor.h  QCSTreeWidget.cpp  QCSTreeWidget.h  QCSXCAD.cpp  QCSXCAD.h  QCSXCAD.pro  QCSXCAD_Global.cpp  QCSXCAD_Global.h  QGeometryPlot.cpp  QGeometryPlot.h  QParameterGui.cpp  QParameterGui.h  QVTKStructure.cpp  QVTKStructure.h  README  VTKPrimitives.cpp  VTKPrimitives.h  export_pov.cpp  export_pov.h  export_x3d.cpp  export_x3d.h  resources.qrc  vcpkg.json  vtkInteractorStyleRubberBand2DPlane.cpp  vtkInteractorStyleRubberBand2DPlane.h
images/Arrows/: Arrows.odg  ArrowsXZ.odg  ArrowsYZ.odg
images/CVS/: Entries  Repository  Root
linux/: QCSXCAD.dsc  QCSXCAD.spec  debian.changelog  debian.control  fedora17.diff
